[AB-0000]: Added null checks and fixed Unit tests.